Actions
Bug #7925
closedlocaledef: backport fixes from FreeBSD
Start date:
2017-03-02
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
Gerrit CR:
Description
There are 2 important fixes that we should backport before updating the CLDR data:
https://svnweb.freebsd.org/base?view=revision&revision=306782
https://svnweb.freebsd.org/base?view=revision&revision=306783
Take some small cosmetic changes as well to reduce the diff (as much as possible).
Updated by Electric Monk about 5 years ago
- % Done changed from 50 to 100
- Status changed from In Progress to Closed
git commit 7262c8a615d4d5997a397e34b7229c53d8a1557a
commit 7262c8a615d4d5997a397e34b7229c53d8a1557a Author: Yuri Pankov <yuri.pankov@nexenta.com> Date: 2017-04-16T01:18:53.000Z 7925 localedef: backport fixes from FreeBSD Reviewed by: Toomas Soome <tsoome@me.com> Approved by: Richard Lowe <richlowe@richlowe.net>
Actions